--- a/posts/bitcoin.mdx
+++ b/posts/bitcoin.mdx
@@ -1,5 +1,11 @@
-# What is Bitcoin
+---
+title: 'Welcome to Divance Community'
+date: 'July 25, 2021'
+description: "Welcome to Divance Community, here you will find a place and a lot of tools related to cryptos"
+thumbnailUrl: '/community.jpeg'
+tags: ['crypto', 'community', 'launchpad']
+---
 
-### Why is Bitcoin important
+We're really excited to announce that we have a new community!
 
-lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Meanwhile we are working on more features and improving the community, you can join us on Discord: https://discord.gg/AwrM7xYkvF
